Refine and refactor slim bulma crud example

--- a/src/rails/slimbulmacrud/app/views/books/_form.html.slim
+++ b/src/rails/slimbulmacrud/app/views/books/_form.html.slim
@@ -1,6 +1,6 @@
 = form_for @book do |f|
   .section
-    .container.is-fluid
+    .container
       = link_to "Kembali ke Daftar Buku", books_path, class: "button is-info is-rounded"
       br
       br
