--- a/src/rails/slimbulmacrud/app/views/layouts/application.html.slim
+++ b/src/rails/slimbulmacrud/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Slim Bulma
+    meta name="viewport" content="width=device-width, initial-scale=1"
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -9,8 +10,7 @@ html
 
   body
     = yield
-    br
-    footer.footer
-      .content.has-text-centered
-        | Rails Slim Bulma CRUD is by Maikel Chandika <mkdika@gmail.com>. 
-        | The source code is licensed under MIT.
+    footer.footer.is-center
+      .content.has-text-centered 
+        | Rails Slim Bulma CRUD is by Maikel Chandika
+          The source code is licensed under MIT.
